# blmc_drivers

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  package.xml
.github/workflows/: build_master.yml  cpp_format.yml
cmake/: .FindXenomai.cmake.swp  FindXenomai.cmake
demo/: blmc_can_anticogging.c  blmc_can_anticogging.cpp  blmc_can_demo.c  blmc_can_demo_optoforce_dumper.c  blmc_can_demo_optoforce_dumper_plot.py  blmc_can_latency_demo.c  blmc_can_sine_demo.c  blmc_can_sine_demo_plot.ipynb
demos/: const_torque_control.cpp  const_torque_control.hpp  demo_1_motor.cpp  demo_1_motor_print_everything.cpp  demo_2_motors.cpp  demo_3_motors.cpp  demo_8_motors.cpp  demo_can_vs_spi.cpp  demo_const_torque_1_motor.cpp  demo_ethernet.cpp  demo_leg.cpp  demo_print_analog_sensors.cpp  demo_sine_position_1_motor.cpp  demo_sine_torque_1_motor.cpp  demo_single_board.cpp  demo_single_motor.cpp  pd_control.cpp  pd_control.hpp  sine_position_control.cpp  sine_position_control.hpp  sine_torque_control.cpp  sine_torque_control.hpp
doc/: getting_started.rst  homing.md  install.rst  main.dox
include/: blmc_can.h  blmc_can_motor_class.h  can.h  optoforce_can.h
include/blmc_can/: blmc_can.h  can.h  optoforce_can.h
include/blmc_drivers/: blmc_joint_module.hpp  serial_reader.hpp
include/blmc_drivers/devices/: analog_sensor.hpp  can_bus.hpp  device_interface.hpp  ethernet_wifi_motor_board.hpp  leg.hpp  motor.hpp  motor_board.hpp  spi_bus.hpp  spi_motor_board.hpp
include/blmc_drivers/utils/: os_interface.hpp  polynome.hpp  polynome.hxx  stamped_data.hpp  threadsafe_object.hpp  threadsafe_object.hxx  threadsafe_timeseries.hpp  threadsafe_timeseries.hxx  timer.hpp
new_api/: api_demo_3_motors.cpp  api_demo_finger.cpp  api_demo_single_motor.cpp  new_api.hpp  new_api_demo.cpp  new_api_demo.h  newest_api_demo.cpp  os_interface.hpp  threadsafe_object.hpp  threadsafe_timeseries.hpp  time_logger.hpp  todo.txt
new_api/benchmark/: blmc_lock_benchmark.cpp  blmc_lock_benchmark2.cpp
new_api/demos/: api_demo_3_motors.cpp  api_demo_finger.cpp  api_demo_single_motor.cpp  demo_3_motors.cpp  demo_finger.cpp  demo_single_motor.cpp  finger.hpp
new_api/devices/: analog_sensor.hpp  analogsensor.hpp  can_bus.hpp  canbus.hpp  device_interface.hpp  finger.hpp  motor.hpp  motor_board.hpp  motorboard.hpp
new_api/utils/: os_interface.hpp  stamped_data.hpp  threadsafe_object.hpp  threadsafe_timeseries.hpp  timer.hpp
scripts/: initialize_can_bus.sh  slider_box.ino
scripts/slider_box/: slider_box.ino
scripts/slider_box2/: slider_box2.ino
src/: a.out  analog_sensors.cpp  blmc_can.c  blmc_can_demo.c  blmc_can_motor_class.cpp  blmc_can_motor_demo.cpp  blmc_joint_module.cpp  build.sh  can.c  can_bus.cpp  ethernet_wifi_motor_board.cpp  lifter_reset_demo.cpp  motor.cpp  motor_board.cpp  optoforce_can.c  serial_reader.cpp  simple_test.c  spi_bus.cpp  spi_motor_board.cpp
src/programs/: can_encoder_index_test.cpp
src/utils/: polynome.cpp
tests/: test_polynome.cpp  threadsafe_object_test.cpp  threadsafe_timeseries_test.cpp
