<?xml version="1.0"?>
<package>
  <name>blmc_drivers</name>
  <version>1.0.0</version>
  <description>
      Drivers for BLMC related devices.
  </description>
  <maintainer email="fwidmaier@tue.mpg.de">Felix Widmaier</maintainer>
  <maintainer email="manuel.wuthrich@gmail.com">Manuel Wuthrich</maintainer>
  <license>TODO</license>
  <author email="fwidmaier@tue.mpg.de">Felix Widmaier</author>
  <author email="manuel.wuthrich@gmail.com">Manuel Wuthrich</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xenomai_ros</build_depend>

  <!-- This provide cmake macros to help building the project. -->
  <build_depend> mpi_cmake_modules </build_depend>
  <run_depend>   mpi_cmake_modules </run_depend>

  <!-- This tools provides real time thread objects in an encapsulated way. -->
  <build_depend> real_time_tools </build_depend>
  <run_depend>   real_time_tools </run_depend>

  <!-- This tools provides real time thread objects in an encapsulated way. -->
  <build_depend> master_board_sdk_catkin </build_depend>
  <run_depend>   master_board_sdk_catkin </run_depend>

  <export>
  </export>
</package>
