<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">

    <name>blmc_drivers</name>
    <version>2.0.0</version>

    <description>
        Drivers for CAN-communication with BLMC related devices developed in
        https://github.com/open-dynamic-robot-initiative/ .
    </description>

    <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
    <maintainer email="felix.widmaier@tuebingen.mpg.de">Felix Widmaier</maintainer>

    <license>BSD 3-clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>mpi_cmake_modules</depend>
    <depend>real_time_tools</depend>
    <depend>time_series</depend>
    <depend>Eigen3</depend>
    <depend>rt</depend>
    <depend>Threads</depend>

    <test_depend>ament_cmake_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
